objects/Contact.object
<CustomObject>
    <fields>
        <fullName>PredictiveSegmentation__c</fullName>
        <label>Predictive Segmentation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>VIC</fullName>
                </value>
                <value>
                    <fullName>VIC Potential</fullName>
                </value>
                <value>
                    <fullName>Multi Timer</fullName>
                </value>
                <value>
                    <fullName>One Timer</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Global_Messaging_Opt_in__c</fullName>
        <formula>IF (ISPICKVAL(Market__c,&apos;JP&apos;), false,

IF (ISPICKVAL(Market__c,&apos;TW&apos;),
IF(AND(Opt_in_Social_Network_Line__c = true, Opt_in_Social_Network_Line_Validity__c =true),true, false),

OR(Opt_in_Social_Messaging__c =true, Opt_in_Social_Network_Line__c=true, Opt_in_Social_Network_WeChat__c=true)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Global Messaging Opt-in</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Transaction_Amount__c</fullName>
        <label>Last Transaction Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opt_in_Mailing_Validity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mailing Validity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opt_in_Social_Messaging__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opt-in Social Messaging</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_Per_Transaction_12M__c</fullName>
        <description>[Item per transaction] 
For ex , for GSA &gt; Calculated in One Base when there is a new Sale or on the 1st every month: average nb of items per sale (POS and ecommerce) on the last 12 rolling months, with amount &gt; 0. minus returns.</description>
        <inlineHelpText>Last 12M</inlineHelpText>
        <label>Item Per Transaction 12M</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loyalty_expiration_month__c</fullName>
        <formula>MONTH(DATEVALUE(Status_Expiring__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loyalty expiration month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PhoneInternationalFormat__c</fullName>
        <label>PhoneInternationalFormat</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Tech_Last_Transaction_BC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field to store LAST_TRANSACTION_BC KPI&apos;s value as a lookup to BC record</description>
        <label>Tech Last Transaction BC</label>
        <referenceTo>BC__c</referenceTo>
        <relationshipLabel>Contacts (Tech Last Transaction BC)</relationshipLabel>
        <relationshipName>Contacts_Last_Transaction_BC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MobileInternationalFormat__c</fullName>
        <label>MobileInternationalFormat</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Channel__c</fullName>
        <label>Preferred Contact Channel POS</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SMS</fullName>
                </value>
                <value>
                    <fullName>EMAIL</fullName>
                </value>
                <value>
                    <fullName>MAIL</fullName>
                </value>
                <value>
                    <fullName>PHONE</fullName>
                </value>
                <value>
                    <fullName>SOCIAL MESSAGING</fullName>
                </value>
                <value>
                    <fullName>DO NOT WANT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Turnover_Premium_Skincare__c</fullName>
        <label>Turnover Premium Skincare</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_of_entry_in_the_Brand__c</fullName>
        <label>Date of entry in the Brand</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opt_in_Social_Network_Line__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opt-in Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TEMP_Typology_to_calculate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TEMP Typology to calculate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Contact_Date_Marketing__c</fullName>
        <description>Not editable</description>
        <label>Last Contact Date Marketing</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Social_Network_Binding_Date__c</fullName>
        <label>Social Network Binding Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Opt_in_Social_Network_WeChat__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opt in Social Network WeChat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Channel_CS__c</fullName>
        <description>Champ uniquement modifiable par l&apos;Advisor.</description>
        <label>Preferred Contact Channel CS</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SMS</fullName>
                </value>
                <value>
                    <fullName>EMAIL</fullName>
                </value>
                <value>
                    <fullName>MAIL</fullName>
                </value>
                <value>
                    <fullName>PHONE</fullName>
                </value>
                <value>
                    <fullName>SOCIAL MESSAGING</fullName>
                </value>
                <value>
                    <fullName>DO NOT WANT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Beauty_Consultant_CS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Preferred Beauty Consultant Service Client</description>
        <label>Preferred Beauty Consultant CS</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opt_in_Social_Messaging_Validity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Social Messaging Validity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Creation_Store_Lookup_Retry_Count__c</fullName>
        <label>Creation Store Lookup Retry Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RecommendedProduct1_GoogleShopping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Il s’agit de créer 4 attributs: 

RecommendedProduct1_GoogleShopping__c 
au niveau de l’objet Contact afin de lier les produits recommandés et leur “fiche” GoogleShopping.

Ces attributs seront des lookup vers l’objet GoogleShopping__c</description>
        <label>Recommended Product 1 GoogleShopping</label>
        <referenceTo>Google_Shopping__c</referenceTo>
        <relationshipLabel>Contacts1</relationshipLabel>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RecommendedProduct2_GoogleShopping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Il s’agit de créer 4 attributs:

RecommendedProduct2_GoogleShopping__c
au niveau de l’objet Contact afin de lier les produits recommandés et leur “fiche” GoogleShopping.

Ces attributs seront des lookup vers l’objet GoogleShopping__c</description>
        <label>Recommended Product 2 GoogleShopping</label>
        <referenceTo>Google_Shopping__c</referenceTo>
        <relationshipLabel>Contacts2</relationshipLabel>
        <relationshipName>Contacts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RecommendedProduct3_GoogleShopping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Il s’agit de créer 4 attributs:

RecommendedProduct3_GoogleShopping__c
au niveau de l’objet Contact afin de lier les produits recommandés et leur “fiche” GoogleShopping.

Ces attributs seront des lookup vers l’objet GoogleShopping__c</description>
        <label>Recommended Product 3 GoogleShopping</label>
        <referenceTo>Google_Shopping__c</referenceTo>
        <relationshipLabel>Contacts3</relationshipLabel>
        <relationshipName>Contacts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opt_in_Social_Network_Line_Validity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Line Validity</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>